[package]
name = "neoethos-desktop"
version = "0.5.6"
description = "NeoEthos desktop (Tauri) — single-process Rust core + web UI"
authors = ["NeoEthos"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
# Keep the Tauri-generated entry name so main.rs's `app_lib::run()` is unchanged.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
anyhow = "1"
# Native OS file picker for the Data Import "Browse…" button.
rfd = "0.17"

# The existing Rust core — reused verbatim, linked INTO this one binary
# (no second process). neoethos-app exposes the full cTrader/broker stack
# (broker_api, ctrader_*, account, live_spots_streamer, reauth) as a library.
# default-features = false → no GPU/libtorch; the desktop shell drives the
# broker, not the heavy discovery/training GPU path.
neoethos-data = { path = "../../crates/neoethos-data" }
neoethos-core = { path = "../../crates/neoethos-core" }
neoethos-app = { path = "../../crates/neoethos-app", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
